force-app/main/default/objects/Account/fields/active_p__c.field-meta.xml
<CustomField>
    <fullName>active_p__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active</label>
    <type>Checkbox</type>
</CustomField>