force-app/main/default/objects/Account/fields/Dirty__c.field-meta.xml
<CustomField>
    <fullName>Dirty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dirty</label>
    <type>Checkbox</type>
</CustomField>