force-app/main/default/objects/Account/fields/followers_count__c.field-meta.xml
<CustomField>
    <fullName>followers_count__c</fullName>
    <label>followers count</label>
    <length>100</length>
    <type>Text</type>
</CustomField>