force-app/main/default/objects/Account/fields/NameF__c.field-meta.xml
<CustomField>
    <fullName>NameF__c</fullName>
    <formula>RIGHT(Name, LEN(Name) - MAX(FIND(&quot;\\&quot;,Name),FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1) ,FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;,Name, FIND(&quot;\\&quot;, Name)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)+1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameF</label>
    <type>Text</type>
</CustomField>