force-app/main/default/objects/Account/fields/NumberOfOpportunities__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpportunities__c</fullName>
    <label>Total of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>