force-app/main/default/objects/Account/fields/Organization_id__c.field-meta.xml
<CustomField>
    <fullName>Organization_id__c</fullName>
    <externalId>true</externalId>
    <label>Organization id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>