force-app/main/default/objects/Account/fields/Phone_Validation__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validation__c</fullName>
    <label>Phone Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>InValid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>