force-app/main/default/objects/Account/fields/Pre_sales_is_required__c.field-meta.xml
<CustomField>
    <fullName>Pre_sales_is_required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre sales is required</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>