force-app/main/default/objects/Account/fields/Pre_Sales_M__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_M__c</fullName>
    <label>Pre Sales M</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
            <value>
                <fullName>Test4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>