force-app/main/default/objects/Account/fields/related_open_deals_count__c.field-meta.xml
<CustomField>
    <fullName>related_open_deals_count__c</fullName>
    <label>related open deals count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>