force-app/main/default/objects/Account/fields/related_won_deals_count__c.field-meta.xml
<CustomField>
    <fullName>related_won_deals_count__c</fullName>
    <label>related won deals count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>