force-app/main/default/objects/Account/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>