force-app/main/default/objects/Account/fields/Total_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Amount__c</fullName>
    <label>Total Opp Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>