force-app/main/default/objects/Account/recordTypes/India_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>India_Record_Type</fullName>
    <active>true</active>
    <description>This is using for to maintain Indian account&apos;s</description>
    <label>India Record Type</label>
</RecordType>