force-app/main/default/objects/Account/recordTypes/USA_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>USA_Record_Type</fullName>
    <active>true</active>
    <description>This is using for to maintain American account&apos;s</description>
    <label>USA Record Type</label>
</RecordType>