force-app/main/default/objects/Account/validationRules/Account_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Name ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter a valid account name.</errorMessage>
</ValidationRule>