force-app/main/default/objects/Account/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Phone ,&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorMessage>Please enter a valid phone number.</errorMessage>
</ValidationRule>