force-app/main/default/objects/Account/validationRules/Pre_Sales.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Sales</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Pre_Sales__c, &apos;YES&apos;) ,ISBLANK(Pre_sales_is_required__c))</errorConditionFormula>
    <errorDisplayField>Pre_sales_is_required__c</errorDisplayField>
    <errorMessage>Please fill this field</errorMessage>
</ValidationRule>