force-app/main/default/objects/Account/validationRules/SIC_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIC_Code_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Sic  ,&quot;^[A-Z0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Sic</errorDisplayField>
    <errorMessage>Please enter a valid SIC Code.</errorMessage>
</ValidationRule>